--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,31 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.css"
+      type="text/css"
+      media="screen"
+    />
+    <link
+      rel="stylesheet"
+      href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"
+      type="text/css"
+      media="screen"
+    />
+
+    <!--     Google Material Fonts and icons     -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"
+    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+    <!--     Fonts Awesome Pro icons     -->
+    <script src="https://kit.fontawesome.com/de066ae600.js"></script>
+
     <title>React App</title>
   </head>
   <body>
